# mini-http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  relatorio.md
diagrams/: diagramaEtapa1.md
include/: client_handler.hpp  libtslog.hpp  server.hpp
src/: client_handler.cpp  libtslog.cpp  main.cpp  server.cpp
tests/: run_clients.sh  test_logger.cpp
